# LP_SLAM

./: README.md  UWB_readings.csv  dataset.mat  mu.pickle  sig.pickle  test_thread.py  th_history.pickle  visLine_x.pickle  visLine_y.pickle  x_history.pickle  y_history.pickle
7500_data/: hist_i.pickle  mu.pickle  sig.pickle  th_history.pickle  visLine_x.pickle  visLine_y.pickle  x_history.pickle  y_history.pickle
dataset/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/corrections/lib/corrections/: odom_correc
install/corrections/share/corrections/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lp_slam/lib/lp_slam/: lp_node  lp_node_mat  lpsim_node  plot_node
install/lp_slam/share/lp_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/save_data/lib/save_data/: icp_node  map2base  plot_results  save_node
install/save_data/share/save_data/: package.bash  package.dsv  package.ps1  (+2 more)
log/: latest_build
src/: README  README.md
src/corrections/: package.xml  setup.cfg  setup.py
src/corrections/corrections/: paper3_ws.code-workspace
src/ekf_slam/: setup.cfg  setup.py
src/ekf_slam/config/: params.yaml
src/ekf_slam/lp_slam/: ekf_node_unknown_pts_working.py  lp_node.py  lp_node_rawObs.py  lp_node_sim.py
src/my_g2o/: gslam2d.py  gslam2d_lib_example.py
src/save_data/: package.xml  setup.cfg  setup.py
src/save_data/save_data/: map2base.py
src/ui/: package.xml  setup.py
src/ui/ui/: range_disp.py  range_disp.ui  run_gui.py  run_gui_dispOnly.py  slam_gui.py
src/uwb_range/: CMakeLists.txt
src/uwb_range/launch/: rangenet.launch.py
src/uwb_range/src/: CMakeLists.txt  p440_ws.code-workspace  rcmRange.c  rcmRange2.c  rcmRange_sample.c  rcmSampleApp.c  rcmSampleApp.vcxproj
src/uwb_slam/: package.xml  setup.py
src/uwb_slam/uwb_slam/: all_uwb_SLAM.py  test_rotate.py
src/uwb_trilat/: setup.cfg  setup.py
src/uwb_trilat/uwb_trilat/: trilaterte_left.py  trilaterte_right.py
(+35 files in other folders)
